#8 Creation Confirm controller + service + openapi
